TRS-1 Setup counts

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <div class="treasure-hunt">
     <img id="map" class="" src="treasuremap.webp" alt="" srcset="">
     <div class="message">&nbsp;</div>
+    <div class="attempts">&nbsp;</div>
     <button id="start-game" class="treasure-hunt__button">Start game</button>
   </div>
   <script src="script.js"></script>
